2005-09-20  Esteban Sanchez <esteban@steve-o.org>

	* configure.in: Dependency of libsoup relaxed to 2.2

	* src/buoh-view.c, src/buoh-window.c, src/main.c,
	data/buoh.desktop.in: Rename and give consistency to the program name
	"Buoh online comics reader"

2005-09-20  Carlos Garcia Campos  <carlosgc@gnome.org>

	* configure.in: Remove glade dependencies and add libsoup

	* src/buoh-comic-loader.[ch]: Use libsoup instead of gnome-vfs
	
2005-09-19  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/buoh-comic-loader.c: 
	* src/buoh-view-comic.c:
	Update the view only if the pixbuf has been changed. Increase the
	references counter for the pixbuf so that when the pixbuf-loader is
	unref the pixbuf is not destroyed.

2005-09-18  Pablo Arroyo  <zioma@linups.org>

	* src/buoh-properties-dialog.c: Added thumbnail to the properties
	dialog.
	* src/buoh-view-comic.c: Changed the zoom scaling factor,
	and max and min zoom values. 

2005-09-17  Esteban Sanchez  <esteban@steve-o.org>

	* src/buoh-properties-dialog.c: Fix build problem (sorry!)

2005-09-17  Esteban Sanchez  <esteban@steve-o.org>

	* src/buoh-comic-manager.c: Better code for freeing the comic list.

	* src/buoh-comic.c: Better code for object construction on new_with_info
	
	* src/buoh-window.c: Sensitive of GoPrevious, GoNext, GoLast and
	GoFirst actions. The sensitive is different in the
	STATE_MESSAGE_ERROR.
	
	* src/buoh-properties-dialog.c: Added the "Date of publication"
	property. Fixed some translation strings.
	
	* data/comics.xml: Some comics added. Martinmorales removed (it's
	just an image, the joke is in the web page).
	
2005-09-17  Pablo Arroyo <zioma@linups.org>

	* data/buoh-ui.xml:
	* src/buoh-window.c: Added the comic view popup menu.

2005-09-16  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/buoh-properties-dialog.[ch]: get_comic_manager method added

	* src/buoh-window.c: Allow more than one properties dialog, one for
	each comic manager in the list
